kube/stable/dax-metaserv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dax-metaserv-deployment
  labels:
    app: dax-metaserv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dax-metaserv
  template:
    metadata:
      labels:
        app: dax-metaserv
    spec:
      containers:
      - name: dax-metaserv
        image: webserv/metaserv:dax_latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000 
        volumeMounts:
        - name: config
          mountPath: "/etc/dax-webserv"
          readOnly: true
      volumes:
      - name: config
        secret:
          secretName: dax-metaserv-config
