kube/stable/dax-metaserv-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dax-metaserv-service
spec:
  selector:
    app: dax-metaserv
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
