kube/stable/dax-metaserv-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: dax-metaserv-ingress
spec:
  rules:
  - host: lsst-lsp-stable.ncsa.illinois.edu
    http:
      paths:
      - backend:
          serviceName: dax-metaserv-service
          servicePort: 5000
        path: /api/image
